<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.jdi</groupId>
    <artifactId>jdi-light-applitools-tests</artifactId>
    <version>1.6.2-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Tests: JDI Light Applitools Eyes</name>

    <properties>
        <jdi.version>1.6.2-SNAPSHOT</jdi.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <applitools.version>3.157.10</applitools.version>
        <driver>chrome</driver>
        <domain>https://jdi-testing.github.io/jdi-light/</domain>
        <aspectj.version>1.9.20</aspectj.version>
        <allure.testng>2.25.0</allure.testng>
        <allure.maven>2.12.0</allure.maven>
        <jetty.version>9.4.12.RC2</jetty.version>
        <testng.version>7.11.0</testng.version>
        <!-- - - add-opens java.base/java.lang=ALL-UNNAMED is needed for JDK 16+ -->
        <aspectj.args></aspectj.args>
    </properties>

    <profiles>
        <profile>
            <id>jdk16</id>
            <activation>
                <jdk>[16,)</jdk>
            </activation>
            <properties>
                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-html</artifactId>
            <version>${jdi.version}</version>
        </dependency>
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-eyes</artifactId>
            <version>${jdi.version}</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.testng}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <!--Allure reporting config in parent-->
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>${jetty.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/general.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>
                        ${aspectj.args}
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <properties>
                        <property>
                            <name>listener</name>
                            <value>io.qameta.allure.testng.AllureTestNg</value>
                        </property>
                    </properties>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven}</version>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <!-- Allure reporting config in parent-->
    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
            </plugin>
        </plugins>
    </reporting>
</project>
